Fix whitespace on right bug really this time

--- a/bodt/static/css/bodt.scss
+++ b/bodt/static/css/bodt.scss
@@ -80,6 +80,11 @@ hr {
   color: rgba(12,12,12,1);
 }
 
+.row-fix {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
 
 // Overriding bootstrap here.
 
